--- a/Styles/style.css
+++ b/Styles/style.css
@@ -128,7 +128,7 @@ section div ul li{
   height: 260px;
   width: 380px;
   border-radius: 19px;
-  margin: ;
+
 }
 
 .box-image{
@@ -382,4 +382,4 @@ article div div ul li{
   font-weight: bold;
   font-size: 40px;
   padding-top: 80px;
-
+}
